unit test rebase from another branch